--- a/guion_mineria_gesteco.html
+++ b/guion_mineria_gesteco.html
@@ -6,7 +6,7 @@
 <link href='https://fonts.loli.net/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css' /><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color: #ffffff; --text-color: #333333; --select-text-bg-color: #B5D6FC; --select-text-font-color: auto; --monospace: "Lucida Console",Consolas,"Courier",monospace; --title-bar-height: 20px; }
 .mac-os-11 { --title-bar-height: 28px; }
 html { font-size: 14px; background-color: var(--bg-color); color: var(--text-color); font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; -webkit-font-smoothing: antialiased; }
-body { margin: 0px; padding: 0px; height: auto; inset: 0px; font-size: 1rem; line-height: 1.42857143; overflow-x: hidden; background-image: inherit; background-size: inherit; background-attachment: inherit; background-origin: inherit; background-clip: inherit; background-color: inherit; tab-size: 4; background-position: inherit; background-repeat: inherit; }
+body { margin: 0px; padding: 0px; height: auto; bottom: 0px; top: 0px; left: 0px; right: 0px; font-size: 1rem; line-height: 1.42857143; overflow-x: hidden; background-image: inherit; background-size: inherit; background-attachment: inherit; background-origin: inherit; background-clip: inherit; background-color: inherit; tab-size: 4; background-position: inherit inherit; background-repeat: inherit inherit; }
 iframe { margin: auto; }
 a.url { word-break: break-all; }
 a:active, a:hover { outline: 0px; }
@@ -64,7 +64,7 @@ div.hr:focus { cursor: none; }
 #write.fences-no-line-wrapping pre { white-space: pre; }
 #write pre.ty-contain-cm { white-space: normal; }
 .CodeMirror-gutters { margin-right: 4px; }
-.md-fences { font-size: 0.9rem; display: block; break-inside: avoid; text-align: left; overflow: visible; white-space: pre; background-image: inherit; background-size: inherit; background-attachment: inherit; background-origin: inherit; background-clip: inherit; background-color: inherit; position: relative !important; background-position: inherit; background-repeat: inherit; }
+.md-fences { font-size: 0.9rem; display: block; break-inside: avoid; text-align: left; overflow: visible; white-space: pre; background-image: inherit; background-size: inherit; background-attachment: inherit; background-origin: inherit; background-clip: inherit; background-color: inherit; position: relative !important; background-position: inherit inherit; background-repeat: inherit inherit; }
 .md-fences-adv-panel { width: 100%; margin-top: 10px; text-align: center; padding-top: 0px; padding-bottom: 8px; overflow-x: auto; }
 #write .md-fences.mock-cm { white-space: pre-wrap; }
 .md-fences.md-fences-with-lineno { padding-left: 0px; }
@@ -74,7 +74,7 @@ div.hr:focus { cursor: none; }
 svg { break-inside: avoid; }
 .footnotes { opacity: 0.8; font-size: 0.9rem; margin-top: 1em; margin-bottom: 1em; }
 .footnotes + .footnotes { margin-top: 0px; }
-.md-reset { margin: 0px; padding: 0px; border: 0px; outline: 0px; vertical-align: top; text-decoration: none; text-shadow: none; float: none; position: static; width: auto; height: auto; white-space: nowrap; cursor: inherit; line-height: normal; font-weight: 400; text-align: left; box-sizing: content-box; direction: ltr; background-position: 0px 0px; }
+.md-reset { margin: 0px; padding: 0px; border: 0px; outline: 0px; vertical-align: top; text-decoration: none; text-shadow: none; float: none; position: static; width: auto; height: auto; white-space: nowrap; cursor: inherit; line-height: normal; font-weight: 400; text-align: left; box-sizing: content-box; direction: ltr; background-position: 0px 0px; background-repeat: initial initial; }
 li div { padding-top: 0px; }
 blockquote { margin: 1rem 0px; }
 li .mathjax-block, li p { margin: 0.5rem 0px; }
@@ -95,7 +95,7 @@ blockquote > :first-child, li > :first-child { margin-top: 0px; }
 }
 .footnote-line { margin-top: 0.714em; font-size: 0.7em; }
 a img, img a { cursor: pointer; }
-pre.md-meta-block { font-size: 0.8rem; min-height: 0.8rem; white-space: pre-wrap; background-color: rgb(204, 204, 204); display: block; overflow-x: hidden; }
+pre.md-meta-block { font-size: 0.8rem; min-height: 0.8rem; white-space: pre-wrap; background-color: rgb(204, 204, 204); display: block; overflow-x: hidden; background-position: initial initial; background-repeat: initial initial; }
 p > .md-image:only-child:not(.md-img-error) img, p > img:only-child { display: block; margin: auto; }
 #write.first-line-indent p > .md-image:only-child:not(.md-img-error) img { left: -2em; position: relative; }
 p > .md-image:only-child { display: inline-block; width: 100%; }
@@ -133,10 +133,10 @@ a.md-toc-inner { font-size: inherit; font-style: inherit; font-weight: inherit; 
 .md-attr { display: none; }
 .md-fn-count::after { content: "."; }
 code, pre, samp, tt { font-family: var(--monospace); }
-kbd { margin: 0px 0.1em; padding: 0.1em 0.6em; font-size: 0.8em; color: rgb(36, 39, 41); background-color: rgb(255, 255, 255); border: 1px solid rgb(173, 179, 185); border-top-left-radius: 3px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; border-bottom-left-radius: 3px; box-shadow: rgba(12, 13, 14, 0.2) 0px 1px 0px, rgb(255, 255, 255) 0px 0px 0px 2px inset; white-space: nowrap; vertical-align: middle; }
+kbd { margin: 0px 0.1em; padding: 0.1em 0.6em; font-size: 0.8em; color: rgb(36, 39, 41); background-color: rgb(255, 255, 255); border: 1px solid rgb(173, 179, 185); border-top-left-radius: 3px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; border-bottom-left-radius: 3px; box-shadow: rgba(12, 13, 14, 0.2) 0px 1px 0px, rgb(255, 255, 255) 0px 0px 0px 2px inset; white-space: nowrap; vertical-align: middle; background-position: initial initial; background-repeat: initial initial; }
 .md-comment { color: rgb(162, 127, 3); opacity: 0.6; font-family: var(--monospace); }
 code { text-align: left; }
-a.md-print-anchor { white-space: pre !important; border: none !important; display: inline-block !important; position: absolute !important; width: 1px !important; right: 0px !important; outline: 0px !important; text-shadow: initial !important; background-position: 0px 0px !important; }
+a.md-print-anchor { white-space: pre !important; border: none !important; display: inline-block !important; position: absolute !important; width: 1px !important; right: 0px !important; outline: 0px !important; text-shadow: initial !important; background-position: 0px 0px !important; background-repeat: initial initial !important; }
 .os-windows.monocolor-emoji .md-emoji { font-family: "Segoe UI Symbol", sans-serif; }
 .md-diagram-panel > svg { max-width: 100%; }
 [lang="flow"] svg, [lang="mermaid"] svg { max-width: 100%; height: auto; }
@@ -145,7 +145,7 @@ table tr th { border-bottom-width: 0px; }
 video { max-width: 100%; display: block; margin: 0px auto; }
 iframe { max-width: 100%; width: 100%; border: none; }
 .highlight td, .highlight tr { border: 0px; }
-mark { background-color: rgb(255, 255, 0); color: rgb(0, 0, 0); }
+mark { background-color: rgb(255, 255, 0); color: rgb(0, 0, 0); background-position: initial initial; background-repeat: initial initial; }
 .md-html-inline .md-plain, .md-html-inline strong, mark .md-inline-math, mark strong { color: inherit; }
 .md-expand mark .md-meta { opacity: 0.3 !important; }
 mark .md-meta { color: rgb(0, 0, 0); }
@@ -157,7 +157,7 @@ mark .md-meta { color: rgb(0, 0, 0); }
 .md-diagram-panel .edgeLabel rect { opacity: 1 !important; }
 .md-fences.md-fences-math { font-size: 1em; }
 .md-fences-advanced:not(.md-focus) { padding: 0px; white-space: nowrap; border: 0px; }
-.md-fences-advanced:not(.md-focus) { background-image: inherit; background-size: inherit; background-attachment: inherit; background-origin: inherit; background-clip: inherit; background-color: inherit; background-position: inherit; background-repeat: inherit; }
+.md-fences-advanced:not(.md-focus) { background-image: inherit; background-size: inherit; background-attachment: inherit; background-origin: inherit; background-clip: inherit; background-color: inherit; background-position: inherit inherit; background-repeat: inherit inherit; }
 .typora-export-show-outline .typora-export-content { max-width: 1440px; margin: auto; display: flex; flex-direction: row; }
 .typora-export-sidebar { width: 300px; font-size: 0.8rem; margin-top: 80px; margin-right: 18px; }
 .typora-export-show-outline #write { --webkit-flex: 2; flex: 2 1 0%; }
@@ -172,9 +172,9 @@ mark .md-meta { color: rgb(0, 0, 0); }
 .outline-content ul { margin-top: 0px; margin-bottom: 0px; }
 .outline-content strong { font-weight: 400; }
 .outline-expander { width: 1rem; height: 1.428571429rem; position: relative; display: table-cell; vertical-align: middle; cursor: pointer; padding-left: 4px; }
-.outline-expander::before { content: ""; position: relative; font-family: Ionicons; display: inline-block; font-size: 8px; vertical-align: middle; }
+.outline-expander::before { content: ''; position: relative; font-family: Ionicons; display: inline-block; font-size: 8px; vertical-align: middle; }
 .outline-item { padding-top: 3px; padding-bottom: 3px; cursor: pointer; }
-.outline-expander:hover::before { content: ""; }
+.outline-expander:hover::before { content: ''; }
 .outline-h1 > .outline-item { padding-left: 0px; }
 .outline-h2 > .outline-item { padding-left: 1em; }
 .outline-h3 > .outline-item { padding-left: 2em; }
@@ -186,19 +186,20 @@ mark .md-meta { color: rgb(0, 0, 0); }
 .outline-item:hover { border-color: rgb(245, 245, 245); background-color: var(--item-hover-bg-color); }
 .outline-item:hover { margin-left: -28px; margin-right: -28px; border-left-width: 28px; border-left-style: solid; border-left-color: transparent; border-right-width: 28px; border-right-style: solid; border-right-color: transparent; }
 .outline-item-single .outline-expander::before, .outline-item-single .outline-expander:hover::before { display: none; }
-.outline-item-open > .outline-item > .outline-expander::before { content: ""; }
+.outline-item-open > .outline-item > .outline-expander::before { content: ''; }
 .outline-children { display: none; }
 .info-panel-tab-wrapper { display: none; }
 .outline-item-open > .outline-children { display: block; }
 .typora-export .outline-item { padding-top: 1px; padding-bottom: 1px; }
 .typora-export .outline-item:hover { margin-right: -8px; border-right-width: 8px; border-right-style: solid; border-right-color: transparent; }
 .typora-export .outline-expander::before { content: "+"; font-family: inherit; top: -1px; }
-.typora-export .outline-expander:hover::before, .typora-export .outline-item-open > .outline-item > .outline-expander::before { content: "−"; }
+.typora-export .outline-expander:hover::before, .typora-export .outline-item-open > .outline-item > .outline-expander::before { content: '−'; }
 .typora-export-collapse-outline .outline-children { display: none; }
 .typora-export-collapse-outline .outline-item-open > .outline-children, .typora-export-no-collapse-outline .outline-children { display: block; }
 .typora-export-no-collapse-outline .outline-expander::before { content: "" !important; }
 .typora-export-show-outline .outline-item-active > .outline-item .outline-label { font-weight: 700; }
 .md-inline-math-container mjx-container { zoom: 0.95; }
+mjx-container { break-inside: avoid; }
 
 
 :root {
@@ -590,6 +591,6 @@ header, .context-menu, .megamenu-content, footer{
 </style><title>guion_mineria_gesteco</title>
 </head>
 <body class='typora-export'><div class='typora-export-content'>
-<div id='write'  class=''><h1 id='guión-de-la-parada-actividad-minera-el-reflejo-de-las-actividades-del-ayer'><span>Guión de la parada &quot;Actividad minera, el reflejo de las actividades del ayer&quot;</span></h1><blockquote><ul><li><strong><em><span>Versión</span></em></strong><span>: 2022-2023</span></li><li><strong><em><span>Asignatura (grado)</span></em></strong><span>: Gestión de ecosistemas (CCAA)</span></li></ul></blockquote><p><img src="https://github.com/aprendiendo-cosas/C_mineria_gesteco/blob/main/images/mineria.jpg?raw=true" referrerpolicy="no-referrer" alt="portada"><span> </span></p><h2 id='ubicación'><span>Ubicación</span></h2><p><span>Las Menas de Serón (Almería)</span></p><h2 id='introducción'><span>Introducción</span></h2><p><span>Un poblado minero perteneciente a Serón, testimonio histórico de las actividades de extracción de hierro (y ‘nitro’ - nitrato de potasio) que llegó a tener 2500-2900 habitantes (finales del siglo XVII hasta el año 1968 que se abandona), que ha generó desarrollo en la zona, una gran influencia en las personas del entorno y en la transformación de territorio en sí. Encinares (la Peana la encina más grande de Andalucía) y grandes pinos laricios (nigra), de los cuales pocos quedan, se vieron afectados por la actividad minera de forma directa, de la ganadería y la agricultura de forma indirecta. Un recordatorio de cómo se puede cambiar todo un territorio de “un día para otro”. </span><a href='https://turismoseron.es/industrial/las-menas-poblado-minero'><span>Esta</span></a><span> web muestra información sobre la zona y </span><a href='https://www.youtube.com/watch?v=6D8NYdP-zfU'><span>este</span></a><span> vídeo aporta también datos de interés. </span></p><p>&nbsp;</p><h2 id='objetivos-docentes'><span>Objetivos docentes</span></h2><ul><li><span>Servicios ecosistémicos</span></li><li><span>Impacto de la actividad humana sobre el territorio</span></li></ul><h2 id='anclajes-conceptuales'><span>Anclajes conceptuales</span></h2><p><span>Se refiere a los conceptos de la ecología que abordamos en esta parada:</span></p><p>&nbsp;</p><h2 id='comentarios-o-reflexiones-al-vuelo-mineria'><span>Comentarios o reflexiones &quot;al vuelo&quot; (#mineria)</span></h2><p>&nbsp;</p><p>&nbsp;</p></div></div>
+<div id='write'  class=''><h1 id='guión-de-la-parada-actividad-minera-el-reflejo-de-las-actividades-del-ayer'><span>Guión de la parada &quot;Actividad minera, el reflejo de las actividades del ayer&quot;</span></h1><blockquote><ul><li><strong><em><span>Versión</span></em></strong><span>: 2022-2023</span></li><li><strong><em><span>Asignatura (grado)</span></em></strong><span>: Gestión de ecosistemas (CCAA)</span></li></ul></blockquote><p><img src="https://github.com/aprendiendo-cosas/C_mineria_gesteco/blob/main/images/mineria.jpg?raw=true" referrerpolicy="no-referrer" alt="portada"><span> </span></p><h2 id='ubicación'><span>Ubicación</span></h2><p><span>Las Menas de Serón (Almería)</span></p><h2 id='introducción'><span>Introducción</span></h2><p><span>Un poblado minero perteneciente a Serón, testimonio histórico de las actividades de extracción de hierro (y ‘nitro’ - nitrato de potasio) que llegó a tener 2500-2900 habitantes (finales del siglo XVII hasta el año 1968 que se abandona), que ha generó desarrollo en la zona, una gran influencia en las personas del entorno y en la transformación de territorio en sí. Encinares (la Peana la encina más grande de Andalucía) y grandes pinos laricios (nigra), de los cuales pocos quedan, se vieron afectados por la actividad minera de forma directa, de la ganadería y la agricultura de forma indirecta. Un recordatorio de cómo se puede cambiar todo un territorio de “un día para otro”. </span><a href='https://turismoseron.es/industrial/las-menas-poblado-minero'><span>Esta</span></a><span> web muestra información sobre la zona y </span><a href='https://www.youtube.com/watch?v=6D8NYdP-zfU'><span>este</span></a><span> vídeo aporta también datos de interés. </span></p><p>&nbsp;</p><h2 id='objetivos-docentes'><span>Objetivos docentes</span></h2><ul><li><span>Servicios ecosistémicos</span></li><li><span>Impacto de la actividad humana sobre el territorio</span></li></ul><h2 id='anclajes-conceptuales'><span>Anclajes conceptuales</span></h2><p><span>Se refiere a los conceptos de la ecología que abordamos en esta parada:</span></p><p>&nbsp;</p><h2 id='comentarios-o-reflexiones-al-vuelo-mineria'><span>Comentarios o reflexiones &quot;al vuelo&quot; (#mineria)</span></h2><p>&nbsp;</p><ul><li><span>#mineria #decaimiento #gestion_local Yo la idea que he hablado un poco con Curro, es que si nos pintan una visión de futuro tan catastrófica, con algo que no podemos controlar como la temperatura y el calentamiento global, ¿por qué no se invierten en otras gestiones más aprovechables a futuro, si esto va a peor? ¿Por qué poner bosques por todos lados, porque no se intentan conservar el ecosistema de matorral que existe hoy en día?</span></li><li><span>#mineria #decaimiento #gestion_local Y otra cosa, con la idea que me he quedado del día de hoy, un poco enlazandolo todo, ha sido que lo mejor es una restauración del ecosistema mediterráneo, introduciendo matorral heterogeneo(como el primer paso de una sucesión ecología natural), y cuando se vea una recuperación del suelo, ya empezar con la reforestacion bien gestionada de especies diferentes mediterráneas. Muy por encima.</span></li></ul><p>&nbsp;</p><h2 id='algunas-fotos'><span>Algunas fotos</span></h2><p><img src="https://github.com/aprendiendo-cosas/C_mineria_gesteco/blob/main/images/1.jpg?raw=true" referrerpolicy="no-referrer" alt="1"><span> </span></p><p><img src="https://github.com/aprendiendo-cosas/C_mineria_gesteco/blob/main/images/2.jpg?raw=true" referrerpolicy="no-referrer" alt="2"><span> </span></p><p><img src="https://github.com/aprendiendo-cosas/C_mineria_gesteco/blob/main/images/3.jpg?raw=true" referrerpolicy="no-referrer" alt="3"><span> </span></p><p><img src="https://github.com/aprendiendo-cosas/C_mineria_gesteco/blob/main/images/4.jpg?raw=true" referrerpolicy="no-referrer" alt="4"><span> </span></p><p><img src="https://github.com/aprendiendo-cosas/C_mineria_gesteco/blob/main/images/5.jpg?raw=true" referrerpolicy="no-referrer" alt="5"><span> </span></p></div></div>
 </body>
 </html>
